# url-abbreviation

url_abbreviation/: Dockerfile  README.md  alembic.Dockerfile  docker-compose.yml  pyproject.toml  settings.py  setup.cfg
url_abbreviation/helm/: Chart.yaml  values.yaml
url_abbreviation/helm/templates/: deployment.yaml  service.yaml
url_abbreviation/migrations/: env.py
url_abbreviation/migrations/versions/: 84b73f677ba9_comment.py
url_abbreviation/src/: main.py
url_abbreviation/src/db/: models.py
url_abbreviation/src/handlers/: generator.py  handlers_db.py
