[tool.poetry]
name = "url-abbreviation"
version = "0.1.0"
description = ""
authors = ["Andrei Iaroshenko <dron777xs@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
wemake-python-styleguide = "^0.18.0"
uvicorn = "^0.22.0"
fastapi = "^0.81"
envparse = "^0.2.0"
starlette = "^0.19.1"
pydantic = "^1.10.6"
requests = "^2.31.0"
anyio = "^3.7.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
asyncpg = "^0.28.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
